// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserActionsRenderer should render 1`] = `
<span
  className=""
>
  <Button
    disabled={false}
    onClick={[Function]}
    size="sm"
  >
    Edit
  </Button>
  <Button
    borderless={true}
    disabled={false}
    onClick={[Function]}
    size="sm"
  >
    <Icon
      symbol="trash"
    />
  </Button>
</span>
`;

exports[`UserActionsRenderer should render with save and cancel buttons because editing is true 1`] = `
<span
  className=""
>
  <Button
    disabled={false}
    display="primary"
    onClick={[Function]}
    size="sm"
  >
    Save
  </Button>
  <Button
    disabled={false}
    onClick={[Function]}
    size="sm"
  >
    Cancel
  </Button>
</span>
`;
